# metacal

./: .dir-locals.el  .gitignore  README.org  pyproject.toml
examples/: main.py  test-logits.npz  test_metacal.py  train-logits.npz
metacal/: evaluation.py  expconf.py  metacal.py  ts.py  utils.py
tests/: test_metacal.py
