[tool.poetry]
name = "metacal"
version = "0.1.0"
description = ""
authors = ["maxc01 <xingchen92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
