[tool.poetry]
name = "metacal"
version = "0.1.0"
description = ""
authors = ["maxc01 <xingchen92@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.26.4"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
torch = {version = "^2.2.0", optional = true}
torchvision = {version = "^0.17.0", optional = true}
matplotlib = {version = "^3.8.3", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
ipdb = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
examples = ["torch","torchvision", "matplotlib"]
